--- a/.gitignore
+++ b/.gitignore
@@ -1,109 +1,30 @@
-# Dependencies
-node_modules/
-*/node_modules/
-
-# Production builds
-dist/
-build/
-*/dist/
-*/build/
-
-# Environment variables
-.env
-.env.local
-.env.production
-.env.development
-*.env
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
+node_modules
+dist
+dist-ssr
+*.local
 
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Java
-*.class
-*.jar
-*.war
-*.ear
-target/
-.m2/
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# RecommendFlix specific (renamed from .bolt)
+# RecommendFlix configuration
 .recommendflix/
 
-# Temporary files
-*.tmp
-*.temp
+# Bolt
+.bolt/
